<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/med_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/med_name"/>

        <TextView
            android:id="@+id/med_dosage"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/med_name"
            android:layout_marginTop="10dp"
            android:text="@string/med_dosage"/>

        <TextView
            android:id="@+id/med_dosage_amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/med_name"
            android:layout_toEndOf="@+id/med_dosage"
            android:layout_toRightOf="@+id/med_dosage"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/med_dosage_amount"/>

        <TextView
            android:id="@+id/med_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/med_name"
            android:layout_toEndOf="@id/med_dosage_amount"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/med_dosage_amount"
            android:text="@string/med_time"/>

        <TextView
            android:id="@+id/med_notes"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/med_dosage_amount"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/med_addn_notes"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>
