<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPrescription">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#000"
        android:text="@string/add_pres_title" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/med_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/med_name"
                android:inputType="textPersonName"/>

            <Spinner
                android:id="@+id/med_dosage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:entries="@array/med_dosage"
                android:gravity="end"
                android:textAlignment="gravity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/med_dosage_amount"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/med_dosage_amount"
                android:inputType="number" />

            <Spinner
                android:id="@+id/med_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:entries="@array/med_time" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@android:drawable/ic_input_add"
                android:onClick="onAddMedicine"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>